# try-ozaki

./: .gitignore  CLAUDE.md  DISCUSSION.md  LICENSE  README.md  pyproject.toml
docs/cuda/: CUBLAS_Library.md  cuda-programming-guide.md
examples/ozaki-simple/: CMakeLists.txt  README.md  gpu_dgemm.cu  matmul_fp64.f90
try_ozaki/: __init__.py  analyzer.py  app.py  claude_runner.py  cli.py  config.py  events.py  job_script.py  pipeline.py  results.py  rewriter.py  submitter.py
try_ozaki/static/: index.html
try_ozaki/tests/: test_repos.py
